--- a/static/style.css
+++ b/static/style.css
@@ -24,33 +24,33 @@ body pre {
 
 body {
     font-family: tamzen;
-    background-color: #000000;
+    background-color: #17161A;
     text-align: left;
-    color: #f6e5dd;
+    color: #eeeefe;
     margin: 2rem;
 }
 
 header {
     font-family: tamzen;
     text-align: right;
-    background-color: #000000;
-    color: #f6e5dd;
+    background-color: #17161A;
+    color: #eeeefe;
 }
 
 footer {
     font-family: tamzen;
     text-align: left;
-    background: #000000;
-    color: #ff66ff;
+    background: #17161A;
+    color: #EBB894;
 }
 
 
 blockquote {
     font-family: tamzen;
     text-align: left;
-    background-color: #000000;
-    color: #ff66ff;
-    border-left: 2px solid #ff66ff;
+    background-color: #17161A;
+    color: #EBB894;
+    border-left: 2px solid #EBB894;
     margin: 0.5em 10px;
     padding: 0em 15px;
 }
@@ -63,7 +63,7 @@ blockquote p {
 /* links */
 a {
     font-family: tamzen;
-    color: #ff66ff;
+    color: #EBB894;
     text-decoration: none;
 }
 
@@ -80,17 +80,17 @@ ul {
 
 li::before {
     content: "- ";
-    color: #f6e5dd;
+    color: #eeeefe;
     margin-right: 0.5em;
 }
 
 
 /* code blocks */
 pre {
-    background: #000000;
-    color: #ff66ff;
+    background: #17161A;
+    color: #EBB894;
 
-    border: 1px solid #ff66ff;
+    border: 1px solid #EBB894;
 
     overflow-x: auto;
     padding-left: 1em;
